--- a/src/main/resources/templates/login_suda.html
+++ b/src/main/resources/templates/login_suda.html
@@ -39,9 +39,17 @@
   </head>
   <body>
     <div style="text-align: center">
-      <img src="img/brand.png" style="width: 280px; height: 100px" />
+      <img
+        src="/img/brand.png"
+        style="width: 280px; height: 100px"
+        alt="brand"
+      />
       <h3>2022年硕士研究生招生考试成绩查询系统</h3>
-      <img src="img/logo.jpeg" style="width: 500px; height: 300px" />
+      <img
+        src="/img/logo.jpeg"
+        style="width: 500px; height: 300px"
+        alt="logo"
+      />
       <!--这里不通过form表单提交客户端请求-->
       <form>
         准考证号：<input type="text" name="id" id="sid" /><br />
